add homepage link in package.json file

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://santiagoelie.github.io/todo-react-app",
   "name": "my-task-management",
   "version": "0.1.0",
   "private": true,
